# rusty

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  buildspec.yml
.github/workflows/: rust.yml
ci/: build.sh  deploy.sh  test.sh
src/: library.rs  main.rs  reader.rs  utils.rs
